examples/test/testpolicy2814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2814
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key26: value36
      key48: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value11
          key38: value8
          key7: value39
      podSelector:
        matchLabels:
          key17: value18
